app/assets/stylesheets/application.scss
/* ... */
.uk-accordion {
    color: #999;
    margin: 0;

    li.uk-open a.uk-accordion-title {
        color: #333;
    }

    a.uk-accordion-title {
        font-size: 15px;
        color: inherit;

        &:focus {
            color: #666;
        }
    }
}

.uk-accordion > :nth-child(n+2) {
    margin-top: 10px;
}

.uk-accordion-content {
    margin: 0;
}

a.hide-labels {
    font-size: 12px;
    color: #666;
    border: thin solid #afafaf;
    border-radius: 3px;
    padding: 2px 0px;
    display: block;
    width: 80px;
    text-align: center;
    margin-top: 10px;
    transition: 0.1s ease-in-out;
    position: relative;
    z-index: 1;

    &:hover {
        text-decoration: none;
        color: #444;
        border-color: #777;
        background-color: #d1d1d1;
    }
}

.chart-no-data {
    font-size: 14px;
    font-style: italic;
}

.fit-content {
    width: fit-content !important;
    width: -moz-fit-content !important;
}

